# xt2denoise

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  files.txt  packager.py  pyproject.toml  stata.toc  test.do  xt2denoise.ado  xt2denoise.pkg  xt2denoise.sthlp
test/: create_test_data.do  test_xt2denoise.do  xt2denoise_testdata.dta
