[tool.poetry]
name = "xt2denoise"
version = "0.1.0"
description = ""
authors = ["Miklós Koren <miklos.koren@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-frontmatter = "^1.0.0"
Jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
